--- a/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINDiscoveryView.xib
+++ b/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINDiscoveryView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -153,7 +153,7 @@
             <connections>
                 <outlet property="dynamicContentView" destination="t37-xO-oSV" id="7RS-1a-9VX"/>
             </connections>
-            <point key="canvasLocation" x="-179" y="-131"/>
+            <point key="canvasLocation" x="239" y="15"/>
         </view>
     </objects>
 </document>
