--- a/SinWaiMai/SinWaiMai/Classes/Guide/View/SINTopTopicCell.xib
+++ b/SinWaiMai/SinWaiMai/Classes/Guide/View/SINTopTopicCell.xib
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="topTopicCell" rowHeight="159" id="KGk-i7-Jjw" customClass="SINTopTopicCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="159"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="topTopicCell" rowHeight="210" id="KGk-i7-Jjw" customClass="SINTopTopicCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="210"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="158.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="209.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OuX-qL-aBo">
-                        <rect key="frame" x="10" y="10" width="300" height="90"/>
+                        <rect key="frame" x="10" y="10" width="300" height="140"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="90" id="rVp-tR-5xg"/>
+                            <constraint firstAttribute="height" constant="140" id="rVp-tR-5xg"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PXK-rg-oFO">
-                        <rect key="frame" x="10" y="110" width="240" height="18"/>
+                        <rect key="frame" x="10" y="160" width="240" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lnH-cl-fcC">
-                        <rect key="frame" x="30" y="138.5" width="220" height="13.5"/>
+                        <rect key="frame" x="30" y="188.5" width="220" height="13.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tsH-hx-vFw">
-                        <rect key="frame" x="260" y="113.5" width="50" height="12"/>
+                        <rect key="frame" x="260" y="163.5" width="50" height="12"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="hia-1U-ICP"/>
                         </constraints>
@@ -46,14 +46,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hor-vK-9B6">
-                        <rect key="frame" x="10" y="138" width="15" height="15"/>
+                        <rect key="frame" x="10" y="188" width="15" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="15" id="aVQ-hd-bq6"/>
                             <constraint firstAttribute="height" constant="15" id="xge-o2-3nu"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yFs-99-aT1">
-                        <rect key="frame" x="260" y="138.5" width="50" height="13.5"/>
+                        <rect key="frame" x="260" y="188.5" width="50" height="13.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="n2F-2x-DBu"/>
                         </constraints>
