--- a/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINShopCarView.xib
+++ b/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINShopCarView.xib
@@ -12,7 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SINShopCarView">
-            <rect key="frame" x="0.0" y="0.0" width="364" height="64"/>
+            <rect key="frame" x="0.0" y="0.0" width="364" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shopCar" translatesAutoresizingMaskIntoConstraints="NO" id="Qve-PQ-ID5">
@@ -28,19 +28,19 @@
                     </userDefinedRuntimeAttributes>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="购物车是空的" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cjd-3U-gjo">
-                    <rect key="frame" x="70" y="10" width="104" height="21"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                    <rect key="frame" x="70" y="5" width="98" height="19.5"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="另需付配送费5元" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMV-Ei-MnK">
-                    <rect key="frame" x="70" y="43" width="101" height="16"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <rect key="frame" x="70" y="26.5" width="86" height="13.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50元起送" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Lc-Sv-gLs">
-                    <rect key="frame" x="244" y="0.0" width="120" height="64"/>
+                    <rect key="frame" x="244" y="0.0" width="120" height="44"/>
                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="120" id="54k-tn-hOf"/>
@@ -49,28 +49,46 @@
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOt-bk-7PO">
+                    <rect key="frame" x="45" y="-10" width="25" height="25"/>
+                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="25" id="9Mv-dy-sQx"/>
+                        <constraint firstAttribute="height" constant="25" id="X50-TL-Nku"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="12.5"/>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                </label>
             </subviews>
             <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="cjd-3U-gjo" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="BYE-X7-DHl"/>
+                <constraint firstItem="cjd-3U-gjo" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="BYE-X7-DHl"/>
                 <constraint firstItem="4Lc-Sv-gLs" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="BaX-kT-NlN"/>
                 <constraint firstItem="Qve-PQ-ID5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="-10" id="Dvm-nN-DXu"/>
                 <constraint firstAttribute="trailing" secondItem="4Lc-Sv-gLs" secondAttribute="trailing" id="Kls-8F-uun"/>
-                <constraint firstItem="NMV-Ei-MnK" firstAttribute="top" secondItem="cjd-3U-gjo" secondAttribute="bottom" constant="12" id="Qy4-8M-krD"/>
+                <constraint firstItem="vOt-bk-7PO" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="-10" id="Q5l-9e-W1s"/>
+                <constraint firstItem="NMV-Ei-MnK" firstAttribute="top" secondItem="cjd-3U-gjo" secondAttribute="bottom" constant="2" id="Qy4-8M-krD"/>
                 <constraint firstItem="NMV-Ei-MnK" firstAttribute="leading" secondItem="cjd-3U-gjo" secondAttribute="leading" id="R5X-gl-5BW"/>
                 <constraint firstItem="cjd-3U-gjo" firstAttribute="leading" secondItem="Qve-PQ-ID5" secondAttribute="trailing" constant="10" id="UBI-ef-kuj"/>
+                <constraint firstItem="vOt-bk-7PO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="45" id="d2q-qm-tbU"/>
                 <constraint firstItem="Qve-PQ-ID5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="gUQ-Gx-9Ku"/>
                 <constraint firstAttribute="bottom" secondItem="4Lc-Sv-gLs" secondAttribute="bottom" id="nyE-9y-r2M"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="curOrderCountLabel" destination="vOt-bk-7PO" id="KRf-pq-bcP"/>
                 <outlet property="differPriceLabel" destination="4Lc-Sv-gLs" id="eHP-ol-ZaP"/>
                 <outlet property="shoppeCarImgV" destination="Qve-PQ-ID5" id="gUe-DN-9NV"/>
                 <outlet property="takeoutPriceLabel" destination="NMV-Ei-MnK" id="EcH-n6-3Ba"/>
                 <outlet property="totalPriceLabel" destination="cjd-3U-gjo" id="Imi-SJ-slH"/>
             </connections>
-            <point key="canvasLocation" x="15" y="-85"/>
+            <point key="canvasLocation" x="-153" y="-154"/>
         </view>
     </objects>
     <resources>
