--- a/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINFoodCell.xib
+++ b/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINFoodCell.xib
@@ -12,10 +12,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="155" id="KGk-i7-Jjw" customClass="SINFoodCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="155"/>
+            <rect key="frame" x="0.0" y="0.0" width="237" height="155"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="155"/>
+                <rect key="frame" x="0.0" y="0.0" width="237" height="155"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oOi-G9-6Sh">
@@ -26,19 +26,19 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="麦辣鸡腿汉堡中套餐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U3h-JF-ilO">
-                        <rect key="frame" x="65" y="20" width="245" height="21"/>
+                        <rect key="frame" x="65" y="20" width="162" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="月售30份 好频率80%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ARK-YP-zbN">
-                        <rect key="frame" x="65" y="94.5" width="245" height="18"/>
+                        <rect key="frame" x="65" y="94.5" width="162" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mlx-pu-zhe">
-                        <rect key="frame" x="280" y="118.5" width="30" height="30"/>
+                        <rect key="frame" x="197" y="117" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="Ax1-4Q-lLf"/>
                             <constraint firstAttribute="width" constant="30" id="HU3-9O-ERI"/>
@@ -49,22 +49,22 @@
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1个原味板烧鸡腿堡 1份薯条 (中) 杯可口可乐 (中)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7SO-xV-fNH">
-                        <rect key="frame" x="65" y="51" width="245" height="33.5"/>
+                        <rect key="frame" x="65" y="51" width="162" height="33.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥ 999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOK-Z5-2Qu">
-                        <rect key="frame" x="65" y="122.5" width="60" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOK-Z5-2Qu">
+                        <rect key="frame" x="65" y="122.5" width="45" height="19.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="60" id="1r2-vE-bWF"/>
+                            <constraint firstAttribute="width" constant="45" id="1r2-vE-bWF"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1l7-w4-msU">
-                        <rect key="frame" x="252" y="124.5" width="28" height="18"/>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="122" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1l7-w4-msU">
+                        <rect key="frame" x="169" y="123" width="28" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="28" id="jul-rF-2y8"/>
                         </constraints>
@@ -72,14 +72,14 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥22" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TKq-po-ieS">
-                        <rect key="frame" x="135" y="123" width="87" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥22" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TKq-po-ieS">
+                        <rect key="frame" x="110" y="122.5" width="29" height="19.5"/>
+                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aie-es-j4G">
-                        <rect key="frame" x="222" y="118.5" width="30" height="30"/>
+                        <rect key="frame" x="139" y="117" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="O2d-1D-Vnx"/>
                             <constraint firstAttribute="height" constant="30" id="wOC-4A-jf8"/>
@@ -110,7 +110,7 @@
                     <constraint firstItem="Mlx-pu-zhe" firstAttribute="centerY" secondItem="1l7-w4-msU" secondAttribute="centerY" id="cfT-A7-Pwy"/>
                     <constraint firstItem="1l7-w4-msU" firstAttribute="centerY" secondItem="aie-es-j4G" secondAttribute="centerY" id="egc-KV-Oep"/>
                     <constraint firstItem="aie-es-j4G" firstAttribute="leading" secondItem="TKq-po-ieS" secondAttribute="trailing" id="ndv-6L-wVB"/>
-                    <constraint firstItem="TKq-po-ieS" firstAttribute="leading" secondItem="vOK-Z5-2Qu" secondAttribute="trailing" constant="10" id="nvO-tl-6a8"/>
+                    <constraint firstItem="TKq-po-ieS" firstAttribute="leading" secondItem="vOK-Z5-2Qu" secondAttribute="trailing" id="nvO-tl-6a8"/>
                     <constraint firstAttribute="trailing" secondItem="U3h-JF-ilO" secondAttribute="trailing" constant="10" id="pBd-VK-lzz"/>
                     <constraint firstItem="ARK-YP-zbN" firstAttribute="top" secondItem="7SO-xV-fNH" secondAttribute="bottom" constant="10" id="zcO-ug-d65"/>
                 </constraints>
@@ -126,7 +126,7 @@
                 <outlet property="saledWithGoodCommentLabel" destination="ARK-YP-zbN" id="nKK-To-qXb"/>
                 <outlet property="shop_name_label" destination="U3h-JF-ilO" id="Wog-Gz-7xP"/>
             </connections>
-            <point key="canvasLocation" x="-124" y="-96.5"/>
+            <point key="canvasLocation" x="-193.5" y="-103.5"/>
         </tableViewCell>
     </objects>
     <resources>
