--- a/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINDiscoveryView.xib
+++ b/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINDiscoveryView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,42 +15,42 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="793"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DzP-Oi-5qE">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shop_01" translatesAutoresizingMaskIntoConstraints="NO" id="DzP-Oi-5qE">
                     <rect key="frame" x="10" y="30" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="8NY-I4-EHS"/>
                         <constraint firstAttribute="width" constant="20" id="uat-77-Uy8"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k8X-4H-VBm">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shop_02" translatesAutoresizingMaskIntoConstraints="NO" id="k8X-4H-VBm">
                     <rect key="frame" x="10" y="65" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="20" id="e3v-ii-ahv"/>
                         <constraint firstAttribute="height" constant="20" id="x2P-VH-n4t"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qe9-Gb-YNJ">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shop_03" translatesAutoresizingMaskIntoConstraints="NO" id="Qe9-Gb-YNJ">
                     <rect key="frame" x="10" y="100" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="20" id="4K6-aE-zi0"/>
                         <constraint firstAttribute="height" constant="20" id="eCr-5A-1vb"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qbh-XX-Ehw">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shop_04" translatesAutoresizingMaskIntoConstraints="NO" id="qbh-XX-Ehw">
                     <rect key="frame" x="10" y="135" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="VSr-5G-J8H"/>
                         <constraint firstAttribute="width" constant="20" id="kCL-fq-3w8"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LmH-XK-tzk">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shop_05" translatesAutoresizingMaskIntoConstraints="NO" id="LmH-XK-tzk">
                     <rect key="frame" x="10" y="170" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="20" id="VOr-ac-Qva"/>
                         <constraint firstAttribute="height" constant="20" id="sa4-p7-R9h"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BkK-Vw-x4w">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shop_06" translatesAutoresizingMaskIntoConstraints="NO" id="BkK-Vw-x4w">
                     <rect key="frame" x="10" y="205" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="JfS-06-CLt"/>
@@ -104,7 +104,7 @@
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t37-xO-oSV">
                     <rect key="frame" x="10" y="286" width="355" height="507"/>
-                    <color key="backgroundColor" red="1" green="0.80309575499999997" blue="0.36318742850000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -153,7 +153,15 @@
             <connections>
                 <outlet property="dynamicContentView" destination="t37-xO-oSV" id="7RS-1a-9VX"/>
             </connections>
-            <point key="canvasLocation" x="239" y="15"/>
+            <point key="canvasLocation" x="48.5" y="-168.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="shop_01" width="19" height="22"/>
+        <image name="shop_02" width="21" height="23"/>
+        <image name="shop_03" width="21" height="23"/>
+        <image name="shop_04" width="23" height="25"/>
+        <image name="shop_05" width="25" height="20"/>
+        <image name="shop_06" width="20" height="23"/>
+    </resources>
 </document>
